# valcalc

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: Early_ipo_data_final.XLS  alembic.ini  cli.py  pyproject.toml
backend/api/: main.py  schemas.py
backend/api/routes/: batch.py  benchmarks.py  companies.py  exports.py  imports.py  users.py  valuations.py
backend/db/: models.py  session.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: 8cef17331f60_initial_tables_users_companies_.py
backend/scripts/: seed_data.py
backend/services/: batch_service.py  document_parser.py  export_service.py  valuation_service.py
backend/tests/: conftest.py
backend/tests/api/: test_batch_and_overrides.py  test_companies.py  test_exports.py  test_valuations.py
backend/tests/engine/: test_benchmarks.py  test_comps.py  test_confidence.py  test_dcf.py  test_engine.py  test_explanation.py  test_last_round.py  test_manual.py  test_models.py  test_rules.py
backend/tests/fixtures/: batch_10_companies.xlsx  batch_25_portfolio.xlsx  batch_5_edge_cases.xlsx  generate_batch_fixtures.py
backend/valuation_engine/: __init__.py  audit_trail.py  confidence.py  engine.py  explanation.py  models.py  rules.py
backend/valuation_engine/benchmarks/: loader.py
backend/valuation_engine/market_data/: __init__.py  alphavantage.py  edgar.py  finnhub_client.py  kaggle_loader.py  refresh.py  sector_map.py
backend/valuation_engine/methods/: base.py  comps.py  dcf.py  last_round.py  manual.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+26 files in other folders)
